<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/cream_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/polkatta_com"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textAlignment="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/intro_pic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_title"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:textSize="18sp"
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/let_s_get_started"
                android:textColor="@color/white"
                android:background="@drawable/brown_bg"
                android:layout_margin="24dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/already_have_an_account_sign_in" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>